--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "esbuild server/**/*.ts --platform=node --format=esm --outdir=dist --packages=external",
+    "prebuild": "npm install",
+    "build": "npx esbuild server/**/*.ts --platform=node --format=esm --outdir=dist --packages=external --resolve-extensions=.ts,.js --alias:@shared=./shared --tsconfig=tsconfig.json",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
