--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "prebuild": "npm install",
     "build": "npx esbuild server/**/*.ts shared/**/*.ts --platform=node --format=esm --outdir=dist --packages=external --tsconfig=tsconfig.json",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=production node dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
