--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "prebuild": "npm install",
-    "build": "npx esbuild server/index.ts --bundle --platform=node --format=esm --outfile=dist/server/index.js --external:./vite-production.js --packages=external --tsconfig=tsconfig.json && cp server/vite-production.js dist/server/ 2>/dev/null || true",
-    "start": "cross-env NODE_ENV=production node dist/server/index.js",
+    "build": "rm -rf dist && npx esbuild server/index-production.ts --bundle --platform=node --format=esm --outfile=dist/server/index.js --packages=external --tsconfig=tsconfig.json",
+    "start": "node dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -75,6 +75,7 @@
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
+    "vite": "^5.4.19",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
@@ -99,8 +100,7 @@
     "drizzle-kit": "^0.30.6",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
-    "vite": "^5.4.19"
+    "typescript": "^5.8.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
