--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "prebuild": "npm install",
-    "build": "rmdir /s dist 2>nul & npm run build:frontend & npm run build:server",
-    "build:frontend": "cd client && npx vite build",
-    "build:server": "npx esbuild server/index-production.ts --bundle --platform=node --format=esm --outfile=dist/server/index.js --packages=external --tsconfig=tsconfig.json",
+    "build": "rm -rf dist && mkdir -p dist/public && cp -r public/* dist/public/ && npx esbuild server/index-production.ts --bundle --platform=node --format=esm --outfile=dist/server/index.js --packages=external --tsconfig=tsconfig.json",
     "start": "node dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
@@ -45,7 +43,6 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
-    "body-parser": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -79,6 +76,7 @@
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
+    "vite": "^5.4.19",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
@@ -88,22 +86,22 @@
     "@replit/vite-plugin-cartographer": "^0.2.7",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "^4.17.23",
+    "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^20.19.9",
+    "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.21",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.6",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.6"
+    "typescript": "^5.8.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
