--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "prebuild": "npm install",
-    "build": "rm -rf dist && mkdir -p dist/public && cp -r public/* dist/public/ && npx esbuild server/index-production.ts --bundle --platform=node --format=esm --outfile=dist/server/index.js --packages=external --tsconfig=tsconfig.json",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build",
+    "build:server": "npx esbuild server/index-production.ts --bundle --platform=node --format=esm --outfile=dist/server/index.js --packages=external --tsconfig=tsconfig.json",
     "start": "node dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
