--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "prebuild": "npm install",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build",
+    "build": "npm run build:static && npm run build:server",
+    "build:static": "mkdir -p dist/public && cp -r client/* dist/public/ 2>/dev/null || cp -r src/* dist/public/ 2>/dev/null || cp public/index.html dist/public/ 2>/dev/null || echo 'No client files found'",
     "build:server": "npx esbuild server/index-production.ts --bundle --platform=node --format=esm --outfile=dist/server/index.js --packages=external --tsconfig=tsconfig.json",
     "start": "node dist/server/index.js",
     "check": "tsc",
